style.css
html{
    height: 95%;
    padding: 1%;
    font-size:4vw;
    background-color: rgb(195, 245, 228);
}

body{
    height:100%;
    width: 99%;
}

.header{
    display:flex;
    height: 9%;
    width: 100%;
    /* border:  solid red; */
    margin-bottom: 1%;
    font-size: 4vw;
    justify-content: center;
    align-items: center;
}


main {
    height: 80%;
    width: 100%;
    /* border:  solid black; */
    display: flex;

}

.Container{
    /* border:  blue solid; */
    width: 100%; 
}

.Visualization{
    width: 100%;
    height: 75%;
    /* border:  solid green; */
    display:flex;
}
.Graph{
    display:flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    border: solid 1px;
    margin-right: 3%;
}
canvas{
    /* border: solid pink; */
    max-height: 100%;
    width: 75%;
    max-width: 75%;
}

#Sort_Graph{
    font-size:0px;
    color: white;
}

.User_Options{
    width: 100%;
    height: 25%;
    display: block;
    align-items: center;
    justify-content: center;
    /* border: solid purple; */
}
#Sort_Options{
    
    padding-top: 10%;
}
#Fresh_Numbers{
    padding-top:10%;
}

select{
    height: fit-content;
    width: fit-content;
    font-size: 4vw;
}
button{
    font-size:4vw;
}
#sortSize{
    width:10%;
}
input{
    font-size:4vw;
}

